fix: fixed overflow issue in StudentDetail view.

--- a/src/pages/StudentDetail/StudentDetail.css
+++ b/src/pages/StudentDetail/StudentDetail.css
@@ -23,7 +23,38 @@
     padding-inline: 2rem;
     border-radius: 1rem;
     background-color: rgba(0,0,0,0.3);
+}
 
+.student-detail-scrollable {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    /* gap: 1rem; */
+    overflow-y: auto;
+    height: calc(100% - 2rem);
+    width: 100%;
+
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(0, 0, 0);
+}
+
+.student-detail-scrollable::-webkit-scrollbar {
+    /* display: none; */
+    width: 8px;
+    /* margin-inline: 0.5rem; */
+}
+
+.student-detail-scrollable::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+.student-detail-scrollable::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 20px;
+    border: 3px solid transparent;
+    background-clip: content-box;
 }
 
 .student-detail-row {
